--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
   background-color: #fffbf9;
   color: black;
   /* font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif; */
+  font-family: 'Montserrat';
   font-weight: 300;
   font-size: 1em;
   --link-color: #4394b2;
@@ -31,13 +32,13 @@ p {
   margin-inline-end: 0px;
 }
 
-a {
+/* a {
   font-size: 1.5em;
-}
+} */
 
 .inner-text {
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-weight: 300;
   font-size: 1.3em;
   --link-color: #4394b2;
@@ -48,7 +49,7 @@ a {
   padding-top: 5px;
   font-size: 2.5em;
   color: rgb(44, 44, 43);
-  font-weight: 200;
+  font-weight: 400;
   margin: 0px;
 }
 
@@ -63,6 +64,12 @@ a {
   width: 75%;
   margin: auto;
   padding-top: 10px;
+}
+.menu a {
+  color: var(--link-color);
+  /* text-decoration: none; */
+  padding: 5px;
+  display: inline-block;
 }
 
 ul {
@@ -101,7 +108,12 @@ ul {
   padding-top: 32px;
   margin: 0;
 }
-
+h2{
+  font-size: 1.75em;
+  font-weight: 300;
+  padding-top: 32px;
+  margin: 0;
+}
 h3 {
   font-size: 1.5em;
   font-weight: 300;
