--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
 
   background-color: #ffefe8;
   color: black;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  /* font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif; */
+  font-family: "Nunito";
   font-weight: 300;
   font-size: 1em;
   --link-color: #4394b2;
