--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,13 @@ h4 {
   height: auto;
   border: 2px black solid;
 }
+
+.part_7 {
+  display: flex;
+  width: 70%;
+  margin-bottom: 2rem;
+  text-wrap: nowrap;
+  align-self: center;
+  justify-self: center;
+
+}
